# target_sistemas

./: .gitignore  README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  pyproject.toml
