[tool.poetry]
name = "target-sistemas"
version = "0.1.0"
description = ""
authors = ["Felippe <4drade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.4"
ruff-lsp = "^0.0.56"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
