[tool.poetry]
name = "target-sistemas"
version = "0.1.0"
description = ""
authors = ["Felippe <4drade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
ruff-lsp = "*"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
select = ["ALL"]
ignore = ["D100"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
